2007-01-23  Akim Demaille  <akim@lrde.epita.fr>

	|
	* src/uexpression.cc: Use ||, not |, for Booleans.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Coding style
	* src/network/bsdnet/network.cc: Use a more tradional reading
	of error values.
	(TCPServerPipe::~TCPServerPipe): close the fd when exiting to
	free the port asap.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Use perror
	* src/network/bsdnet/network.cc: Use perror where there are syscall
	failures.
	Shorten scopes.

2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	Update libport
	* src/console.cc: .

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Fix UValue constructions
	* src/uexpression.cc: here.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	More UValue ctor uses
	* src/uexpression.cc: here.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Use ctors
	* src/uvalue.hh: Comment changes.
	* src/uexpression.cc (UExpression::eval): Use the ctors instead
	of constructing by hand, and without telling the object...

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Scope shortening
	* src/uexpression.cc: here.
	Use ?:.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	No longer alias urbi::UBlendType, just use it
	* src/utypes.hh: No longer alias it and its members.
	* src/ucommand.cc, src/userver.cc, src/uvariable.cc,
	* src/uvariable.hh: Adjust.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	Coding style
	* src/uexpression.cc: Use shorten argument names that don't
	conflict with the member names.
	Simplify accordingly.
	Translate comments into asserts.
	Simplify the logic of the bin expression case.

2007-01-19  Akim Demaille  <demaille@gostai.com>

	-Werror
	* configure.ac: Now handled by URBI_PROG_CXX.

2007-01-19  Matthieu Nottale  <nottale@gostai.com>

	Add missing lock in block memory manager. Fix a double delete when a variable with function scope is deleted. Replace some ustring by std::string